--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -104,3 +104,14 @@ li {
 .f-full {
   flex-grow: 1;
 }
+/* flex end */
+
+/* material progress bar */
+
+.mat-mdc-progress-spinner {
+  max-width: 1.4em;
+  max-height: 1.4em;
+  transition: all 1s ease-in-out;
+}
+
+/* material progress bar */
