--- a/client/src/app/module/standard/standard-details/standard-details.component.html
+++ b/client/src/app/module/standard/standard-details/standard-details.component.html
@@ -20,7 +20,7 @@
         <div class="f-100"></div>
 
         <!-- Enroll User -->
-        <div class="box-title"><i class="bi bi-person-plus"></i> &nbsp; Add users</div>
+        <div class="box-title"><i class="bi bi-person-plus"></i> &nbsp; Add Users</div>
         <div class="box f-100">
             <div class="box-body">
                 <app-enroll [standardId]="standardId" [schoolId]="schoolId"></app-enroll>
@@ -30,7 +30,7 @@
 
         <div class="f-100"></div>
 
-        <div class="box-title"><i class="bi bi-clipboard-x"></i> &nbsp; Not Assigned Yet </div>
+        <div class="box-title"><i class="bi bi-clipboard-x"></i> &nbsp; Not Assigned yet </div>
         <div class="box f-100">
             <div class="box-body">
                 <mat-accordion>
