--- a/client/src/app/module/timetable/create-timetable/create-timetable.component.html
+++ b/client/src/app/module/timetable/create-timetable/create-timetable.component.html
@@ -3,9 +3,10 @@
         <div class="page-title">Time Table <i class="bi bi-slash-lg"></i> Add</div>
     </div>
     <div class="page-body">
-        <div class="box">
+        <div class="box ">
             <p> You can Add new Exam Sheet or update the data sheet</p>
         </div>
+        <div class="f-100"></div>
         <div class="box">
             <div class="box-body">
                 <form id="timetable-form" name="create-timetable" (ngSubmit)="Submit()" [formGroup]="timetable.form">
