--- a/client/src/app/core/public-layout/container/container.component.css
+++ b/client/src/app/core/public-layout/container/container.component.css
@@ -1,6 +1,10 @@
 header {
   height: 5rem;
   border-bottom: 1px solid rgb(194, 194, 194);
+  position: sticky;
+  top: 0;
+  background-color: white;
+  z-index: 1000;
 }
 
 main {
