--- a/client/src/app/module/attendance/attendance.component.css
+++ b/client/src/app/module/attendance/attendance.component.css
@@ -1,5 +1,13 @@
-.std-name-list{
-    margin-left: 1rem;
-    text-transform: capitalize;
-    color: #777;
+.list-icon {
+  scale: 1.3;
+  color: red;
+}
+.less-att-list {
+  text-transform: capitalize;
+  font-family: "Poppins", sans-serif;
+  
+}
+
+.f-50{
+    min-height: 15rem;
 }
