--- a/client/src/app/module/attendance/create-attendance/create-attendance.component.html
+++ b/client/src/app/module/attendance/create-attendance/create-attendance.component.html
@@ -3,54 +3,61 @@
         <div class="page-title">Punch Attendance</div>
     </div>
     <div class="page-body">
-        <div class="box">
-            <!-- <p>Hindi</p> -->
-            <mat-select name="standard">
-                <mat-option [disabled]="true">Select Class</mat-option>
-                <ng-container *ngFor="let class of Subjects">
-                    <mat-option [value]="class.id">{{class.name}}<sup>th</sup>Standard</mat-option>
-                </ng-container>
-            </mat-select>
-        </div>
-        <div class="box">
-            <p>8th Standard</p>
-        </div>
-        <div class="box-title f-100">
-            Today's Attendance <span class="small-title">{{currentDate|date:'EEEE, MMMM d, y'}}</span>
-        </div>
-        <div class="box f-100">
+        <ng-container *ngIf="isLoading; else show">
             <mat-spinner *ngIf="isLoading"></mat-spinner>
-            <div class="box-body">
-                <!-- MARK: Student's List
+        </ng-container>
+        <ng-template #show>
+            <div class="box subject">
+                <mat-select placeholder="Select Subject" name="subject" [disabled]="!isAdmin" [(value)]="currSubject">
+                    <ng-container *ngFor="let sub of Subjects">
+                        <mat-option [value]="sub.Id">{{sub.Name}}<sup>th</sup>Standard</mat-option>
+                    </ng-container>
+                </mat-select>
+            </div>
+            <div class="box standard">
+                <mat-select placeholder="Select Standard" name="standard" [disabled]="!isAdmin" [(value)]="currStandard">
+                    <ng-container *ngFor="let std of Standards">
+                        <mat-option [value]="std.Id">{{std.Name}}<sup>th</sup> Standard</mat-option>
+                    </ng-container>
+                </mat-select>
+            </div>
+            <div class="box-title f-100">
+                Today's Attendance <span class="small-title">{{currentDate|date:'EEEE, MMMM d, y'}}</span>
+            </div>
+            <div class="box f-100">
+                <div class="box-body">
+                    <!-- MARK: Student's List
                  -->
-                <mat-selection-list #SelcetedStudents [color]="'primary'" (selectionChange)="update(SelcetedStudents)">
-                    <ul>
-                        <li *ngFor="let student of Students">
-                            <mat-list-option [selected]="student.Status" [value]="student.Id">
-                                <div class="list-container">
-                                    <p class="std-roll-list">
-                                        <i class="bi bi-person"></i> {{student.Id}}
-                                    </p>
-                                    <p class="std-name-list">
-                                        {{student.Name}}
-                                    </p>
-                                </div>
-                            </mat-list-option>
-                        </li>
-                    </ul>
-                </mat-selection-list>
+                    <mat-selection-list #SelcetedStudents [color]="'primary'"
+                        (selectionChange)="update(SelcetedStudents)">
+                        <ul>
+                            <li *ngFor="let student of Students">
+                                <mat-list-option [selected]="student.Status" [value]="student.Id">
+                                    <div class="list-container">
+                                        <p class="std-roll-list">
+                                            <i class="bi bi-person"></i> {{student.UserName}}
+                                        </p>
+                                        <p class="std-name-list">
+                                            {{student.Name}}
+                                        </p>
+                                    </div>
+                                </mat-list-option>
+                            </li>
+                        </ul>
+                    </mat-selection-list>
+                </div>
             </div>
-        </div>
-        <!-- MARK: Tracker
+            <!-- MARK: Tracker
                          -->
-        <div class="box">
-            <div class="box-title">
-                <p> {{SelcetedStudents.selectedOptions.selected.length}} Presents</p>
+            <div class="box">
+                <div class="box-title">
+                    <p> {{SelcetedStudents.selectedOptions.selected.length}} Presents</p>
+                </div>
             </div>
-        </div>
-        <!-- MARK: Action
+            <!-- MARK: Action
          -->
-        <button class="primery-btn bg-s" (click)="SelcetedStudents.selectedOptions.clear()">Clear</button>
-        <button class="primery-btn" (click)="submit()">Save </button>
+            <button class="primery-btn bg-s" (click)="SelcetedStudents.selectedOptions.clear()">Clear</button>
+            <button class="primery-btn" (click)="submit()">Save </button>
+        </ng-template>
     </div>
 </section>
