--- a/client/src/app/module/profile/student/student.component.css
+++ b/client/src/app/module/profile/student/student.component.css
@@ -1,9 +1,22 @@
 .edit{
-    display: grid;
-    grid-template-columns: repeat(2,1fr);
+    /* display: grid;
+    grid-template-columns: repeat(3,1fr);
+    gap: 1rem; */
+    display: flex;
+    flex-wrap: wrap;
     gap: 1rem;
+    padding: 2rem;
+    margin-bottom: 1rem;
+}
+
+.edit > *{
+    flex: 1 1 30%;
 }
 
 .primery-btn{
     justify-self: start;
+}
+
+.box-title{
+    align-self: flex-end;
 }
