--- a/client/src/app/module/profile/student/student.component.html
+++ b/client/src/app/module/profile/student/student.component.html
@@ -4,7 +4,6 @@
         <div class="page-title" *ngIf="canAccess">Student's Profile</div>
     </div>
     <div class="page-body">
-
         <ng-container *ngIf="!isEditing">
             <div class="box">
                 <div class="box-title">Kushagra Gangwal</div>
@@ -15,6 +14,11 @@
         </ng-container>
 
         <ng-container *ngIf="isEditing">
+            <h4 class="box-title">Personal Information</h4>
+            <div class="f-full"></div><button class="primery-btn">
+                {{!isLoading ? 'Save': ''}}
+                <mat-spinner *ngIf="isLoading"></mat-spinner>
+            </button>
             <form id="student-profile-form" class="box f-100 edit" name="create-student" (ngSubmit)="save()"
                 [formGroup]="student.form">
 
@@ -26,21 +30,6 @@
                 <mat-form-field appearance="outline">
                     <mat-label>Last name</mat-label>
                     <input matInput formControlName="LastName">
-                </mat-form-field>
-
-                <mat-form-field appearance="outline">
-                    <mat-label>Roll Number</mat-label>
-                    <input matInput formControlName="RollNumber">
-                </mat-form-field>
-
-                <mat-form-field appearance="outline">
-                    <mat-label>Division</mat-label>
-                    <input matInput formControlName="Division">
-                </mat-form-field>
-
-                <mat-form-field appearance="outline">
-                    <mat-label>Standard</mat-label>
-                    <input matInput formControlName="StandardId">
                 </mat-form-field>
 
                 <mat-form-field appearance="outline">
@@ -59,20 +48,42 @@
                 </mat-form-field>
 
                 <mat-form-field appearance="outline">
+                    <mat-label>Date of Birth</mat-label>
+                    <input matInput formControlName="Gender">
+                </mat-form-field>
+
+                <!-- <mat-form-field>
+                    <input matInput [matDatepicker]="to" formControlName="DOB">
+                    <mat-datepicker-toggle matSuffix [for]="to"></mat-datepicker-toggle>
+                    <mat-datepicker #to></mat-datepicker>
+                </mat-form-field> -->
+
+                <mat-form-field appearance="outline">
                     <mat-label>Address</mat-label>
                     <input matInput formControlName="Address">
                 </mat-form-field>
+            </form>
+
+            <h4 class="box-title">Standard Information</h4>
+            <form id="student-profile-form" class="box f-100 edit" name="create-student" (ngSubmit)="save()"
+                [formGroup]="student.form">
 
                 <mat-form-field appearance="outline">
-                    <mat-label>Medium</mat-label>
-                    <input matInput formControlName="Medium">
+                    <mat-label>Roll Number</mat-label>
+                    <input matInput formControlName="RollNumber">
                 </mat-form-field>
 
-                <button class="primery-btn">
-                    {{!isLoading ? 'Save': ''}}
-                    <mat-spinner *ngIf="isLoading"></mat-spinner>
-                </button>
+                <mat-form-field appearance="outline">
+                    <mat-label>Division</mat-label>
+                    <input matInput formControlName="Division">
+                </mat-form-field>
+
+                <mat-form-field appearance="outline">
+                    <mat-label>Standard</mat-label>
+                    <input matInput formControlName="StandardId">
+                </mat-form-field>
             </form>
+
         </ng-container>
 
     </div>
