all profiles created

--- a/client/src/app/module/attendance/attendance.component.html
+++ b/client/src/app/module/attendance/attendance.component.html
@@ -32,7 +32,10 @@
         </div>
         <div class="box f-30">
             <div class="box-title">
-               What u doin?
+            Faculty Attendance
+            </div>
+            <div class="box-body">
+                <!-- 18/21 -->
             </div>
         </div>
     </div>
