--- a/client/src/app/module/profile/faculty/faculty.component.html
+++ b/client/src/app/module/profile/faculty/faculty.component.html
@@ -1,1 +1,106 @@
-<p>faculty works!</p>
+<section class="page">
+    <div class="page-header">
+        <h4 class="page-title">Your Profile</h4>
+    </div>
+    <div class="page-body">
+        <ng-container *ngIf="!isEditing">
+            <p class="box-title">Personal Information</p>
+            <button class="primery-btn " (click)="edit()"><i class="bi bi-pencil-square"></i></button>
+            <div class="f-100"></div>
+            <p class="box">
+                Miss. Hetanshini Bhardwaj
+            </p>
+            <p class=" box ">
+                <i class="bi bi-person"></i> FAC88840
+            </p>
+            <p class=" box ">
+                Female
+            </p>
+            <p class=" box ">
+                <i class="bi bi-envelope-at "></i> &nbsp; hetanshiniji$gmail.com
+            </p>
+            <p class="box">
+                <i class="bi bi-telephone "></i> 6945893489
+            </p>
+            <p class=" box">
+                <i class="bi bi-geo"></i> &nbsp; 603/1, Kishannagar, Sahakri jin road, Himmatnagar,
+                Gandhinagar, 383001
+            </p>
+            <h4 class="box-title m-t-1  f-100"> Enrolled Subjects </h4>
+            <p class="box">
+                English
+            </p>
+            <p class="box">
+                8th Standard
+            </p>
+        </ng-container>
+
+        <ng-container *ngIf="isEditing">
+        <h4 class="box-title">Personal Information</h4>
+        <div class="f-full"></div>
+        <button class="primery-btn" (click)="save()">
+            {{!isLoading ? 'Save': ''}}
+            <mat-spinner *ngIf="isLoading"></mat-spinner>
+        </button>
+        <form id="student-profile-form" class="box f-100 edit" name="create-student" (ngSubmit)="save()"
+            [formGroup]="faculty.form">
+            <mat-form-field class="subject" appearance="outline">
+                <mat-label>First name</mat-label>
+                <input matInput formControlName="FirstName">
+            </mat-form-field>
+        
+            <mat-form-field appearance="outline">
+                <mat-label>Last name</mat-label>
+                <input matInput formControlName="LastName">
+            </mat-form-field>
+        
+            <mat-form-field appearance="outline">
+                <mat-label>Email</mat-label>
+                <input matInput formControlName="Email">
+            </mat-form-field>
+        
+            <mat-form-field appearance="outline">
+                <mat-label>Phone</mat-label>
+                <input matInput formControlName="Phone">
+            </mat-form-field>
+        
+            <mat-form-field appearance="outline">
+                <mat-label>Gender</mat-label>
+                <input matInput formControlName="Gender">
+            </mat-form-field>
+        
+            <mat-form-field appearance="outline">
+                <mat-label>Date of Birth</mat-label>
+                <input matInput formControlName="Gender">
+            </mat-form-field>
+        
+            <!-- <mat-form-field>
+                                    <input matInput [matDatepicker]="to" formControlName="DOB">
+                                    <mat-datepicker-toggle matSuffix [for]="to"></mat-datepicker-toggle>
+                                    <mat-datepicker #to></mat-datepicker>
+                                </mat-form-field> -->
+        
+            <mat-form-field class="address" appearance="outline">
+                <mat-label>Address</mat-label>
+                <input matInput formControlName="Address">
+            </mat-form-field>
+        
+            <mat-form-field appearance="outline">
+                <mat-label>Roll Number</mat-label>
+                <input matInput formControlName="RollNumber">
+            </mat-form-field>
+        
+            <mat-form-field appearance="outline">
+                <mat-label>Division</mat-label>
+                <input matInput formControlName="Division">
+            </mat-form-field>
+        
+            <mat-form-field appearance="outline">
+                <mat-label>Standard</mat-label>
+                <input matInput formControlName="StandardId">
+            </mat-form-field>
+        </form>
+        </ng-container>
+
+    </div>
+</section>
