--- a/client/src/app/module/profile/student/student.component.html
+++ b/client/src/app/module/profile/student/student.component.html
@@ -1,89 +1,122 @@
 <section class="page">
     <div class="page-header">
-        <div class="page-title" *ngIf="!canAccess">Your Profile</div>
-        <div class="page-title" *ngIf="canAccess">Student's Profile</div>
+        <h4 class="page-title" *ngIf="!canAccess">Your Profile</h4>
+        <h4 class="page-title" *ngIf="canAccess">Student's Profile</h4>
     </div>
     <div class="page-body">
         <ng-container *ngIf="!isEditing">
-            <div class="box">
-                <div class="box-title">Kushagra Gangwal</div>
-            </div>
-            <div class="box">
-                221SBEIT30007
-            </div>
+            <!-- INDENT -->
+            <p class="box-title m-t-1 f-70 f-full">Personal Information</p>
+            <button class="primery-btn" (click)="edit()"><i class="bi bi-pencil-square"></i></button>
+            <p class=" box ">
+                Gangwal Kushagra Atulkumar
+            </p>
+            <p class=" box f-full">
+                <i class="bi bi-person"></i> STU588840
+            </p>
+            <p class=" box f-full">
+                Male
+            </p>
+            <p class=" box f-full">
+                <i class="bi bi-envelope-at "></i> &nbsp; kushagragangwal$gmail.com
+            </p>
+            <p class="box f-full">
+                <i class="bi bi-telephone "></i> 9426819715
+            </p>
+            <p class=" box f-full">
+                <i class="bi bi-scooter"></i> &nbsp; 16, Anand Sagar Tenement, Sahakri jin road, Himmatnagar,
+                Sabarkantha, 383001
+            </p>
+            <!-- INDENT -->
+            <p class="box-title f-100 m-t-1">School Information</p>
+            <p class="box">10<sup>th</sup> Standard
+            </p>
+            <p class="box">
+                Division : C
+            </p>
+            <p class="box">
+                Medium : English
+            </p>
+            <p class=" box">
+                Roll number : 31
+            </p>
+            <!-- INDENT -->
+            <p class="box-title f-100 m-t-1">Parents Information</p>
+            <p class="box">
+                Father
+            </p>
+            <p class=" box">
+                Gangwal Atulkumar Mohanlal
+            </p>
+            <p class="box">
+                <i class="bi bi-person"></i> PAR588840
+            </p>
         </ng-container>
 
         <ng-container *ngIf="isEditing">
             <h4 class="box-title">Personal Information</h4>
-            <div class="f-full"></div><button class="primery-btn">
+            <div class="f-full"></div>
+            <button class="primery-btn" (click)="save()">
                 {{!isLoading ? 'Save': ''}}
                 <mat-spinner *ngIf="isLoading"></mat-spinner>
             </button>
-            <form id="student-profile-form" class="box f-100 edit" name="create-student" (ngSubmit)="save()"
-                [formGroup]="student.form">
+            <form id="student-profile-form" class="box f-100 edit" name="create-student" (ngSubmit)="save()" [formGroup]="student.form">
+                    <mat-form-field class="subject" appearance="outline">
+                        <mat-label>First name</mat-label>
+                        <input matInput formControlName="FirstName">
+                    </mat-form-field>
 
-                <mat-form-field class="subject" appearance="outline">
-                    <mat-label>First name</mat-label>
-                    <input matInput formControlName="FirstName">
-                </mat-form-field>
+                    <mat-form-field appearance="outline">
+                        <mat-label>Last name</mat-label>
+                        <input matInput formControlName="LastName">
+                    </mat-form-field>
 
-                <mat-form-field appearance="outline">
-                    <mat-label>Last name</mat-label>
-                    <input matInput formControlName="LastName">
-                </mat-form-field>
+                    <mat-form-field appearance="outline">
+                        <mat-label>Email</mat-label>
+                        <input matInput formControlName="Email">
+                    </mat-form-field>
 
-                <mat-form-field appearance="outline">
-                    <mat-label>Email</mat-label>
-                    <input matInput formControlName="Email">
-                </mat-form-field>
+                    <mat-form-field appearance="outline">
+                        <mat-label>Phone</mat-label>
+                        <input matInput formControlName="Phone">
+                    </mat-form-field>
 
-                <mat-form-field appearance="outline">
-                    <mat-label>Phone</mat-label>
-                    <input matInput formControlName="Phone">
-                </mat-form-field>
+                    <mat-form-field appearance="outline">
+                        <mat-label>Gender</mat-label>
+                        <input matInput formControlName="Gender">
+                    </mat-form-field>
 
-                <mat-form-field appearance="outline">
-                    <mat-label>Gender</mat-label>
-                    <input matInput formControlName="Gender">
-                </mat-form-field>
+                    <mat-form-field appearance="outline">
+                        <mat-label>Date of Birth</mat-label>
+                        <input matInput formControlName="Gender">
+                    </mat-form-field>
 
-                <mat-form-field appearance="outline">
-                    <mat-label>Date of Birth</mat-label>
-                    <input matInput formControlName="Gender">
-                </mat-form-field>
+                    <!-- <mat-form-field>
+                            <input matInput [matDatepicker]="to" formControlName="DOB">
+                            <mat-datepicker-toggle matSuffix [for]="to"></mat-datepicker-toggle>
+                            <mat-datepicker #to></mat-datepicker>
+                        </mat-form-field> -->
 
-                <!-- <mat-form-field>
-                    <input matInput [matDatepicker]="to" formControlName="DOB">
-                    <mat-datepicker-toggle matSuffix [for]="to"></mat-datepicker-toggle>
-                    <mat-datepicker #to></mat-datepicker>
-                </mat-form-field> -->
+                    <mat-form-field class="address" appearance="outline">
+                        <mat-label>Address</mat-label>
+                        <input matInput formControlName="Address">
+                    </mat-form-field>
 
-                <mat-form-field appearance="outline">
-                    <mat-label>Address</mat-label>
-                    <input matInput formControlName="Address">
-                </mat-form-field>
+                    <mat-form-field appearance="outline">
+                        <mat-label>Roll Number</mat-label>
+                        <input matInput formControlName="RollNumber">
+                    </mat-form-field>
+
+                    <mat-form-field appearance="outline">
+                        <mat-label>Division</mat-label>
+                        <input matInput formControlName="Division">
+                    </mat-form-field>
+
+                    <mat-form-field appearance="outline">
+                        <mat-label>Standard</mat-label>
+                        <input matInput formControlName="StandardId">
+                    </mat-form-field>
             </form>
-
-            <h4 class="box-title">Standard Information</h4>
-            <form id="student-profile-form" class="box f-100 edit" name="create-student" (ngSubmit)="save()"
-                [formGroup]="student.form">
-
-                <mat-form-field appearance="outline">
-                    <mat-label>Roll Number</mat-label>
-                    <input matInput formControlName="RollNumber">
-                </mat-form-field>
-
-                <mat-form-field appearance="outline">
-                    <mat-label>Division</mat-label>
-                    <input matInput formControlName="Division">
-                </mat-form-field>
-
-                <mat-form-field appearance="outline">
-                    <mat-label>Standard</mat-label>
-                    <input matInput formControlName="StandardId">
-                </mat-form-field>
-            </form>
-
         </ng-container>
 
     </div>
